--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,12 @@
 requests>=2.31.0
 urllib3>=2.0.0
 
+# Flask web application
+flask>=3.0.0
+
+# JWT token handling
+PyJWT>=2.8.0
+
 # Optional: For MitM proxy and traffic capture
 mitmproxy>=10.0.0
 
