--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,6 @@ rich>=13.0.0
 # Qt GUI framework for Control Center
 PySide6>=6.5.0
 
+# Appium client for Android UI automation
+Appium-Python-Client>=3.2.1
+selenium>=4.11.0
