--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,11 @@ PySide6>=6.5.0
 # Appium client for Android UI automation
 Appium-Python-Client>=3.2.1
 selenium>=4.11.0
+
+# Data modelling & serialization
+pydantic>=2.7.0
+PyYAML>=6.0.0
+
+# Structured logging & metrics
+loguru>=0.7.2
+prometheus-client>=0.19.0
