--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,6 @@ PyYAML>=6.0.0
 # Structured logging & metrics
 loguru>=0.7.2
 prometheus-client>=0.19.0
+
+# Encryption utilities
+cryptography>=42.0.0
